--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="">
 <head>
     <meta charset="UTF-8">
-    <link href="/favicon.ico" rel="icon">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="/favicon.ico"
+          rel="icon">
+    <meta content="width=device-width, initial-scale=1.0"
+          name="viewport">
     <title>Vite App</title>
-    <meta content="light dark" name="color-scheme">
 </head>
-<body class="dark">
-<div id="app"></div>
-<script src="/src/main.js" type="module"></script>
+<body>
+    <div id="app"></div>
+    <script src="/src/main.js"
+            type="module"></script>
 </body>
 </html>
